tests/miniJava/neg/001083_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new class java { public static void Main ( String [ ] java ) { { } } } [ 0 ] ; } }
